# dan_toropov_cw_4

./: README.md  main.py  pyproject.toml
data/: report.xlsx  vacancies.json
src/: api.py  exceptions.py  filesaver.py  interactive.py  settings.py  utils.py  vacancies.py
tests/: conftest.py  test_api.py  test_interactive.py  test_utils.py  test_vacancies.py
