[tool.poetry]
name = "dan-toropov-cw-4"
version = "0.1.0"
description = ""
authors = ["dan.toropov <dan.toropov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
openpyxl = "^3.1.3"
xlsxwriter = "^3.2.0"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
